fix highlight and fancy tooltip on IE10-

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
@@ -1710,7 +1710,7 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
     text-decoration: none;
     text-transform: uppercase;
     box-shadow: 0 0 7px black;
-    z-index:99999;
+    z-index:-1;
 }
 
 .fr-arrow {
@@ -1748,6 +1748,7 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
     -ms-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
+    z-index:1;
 }
 
 .fr-tooltip.out {
