--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/tooltips.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/tooltips.css
@@ -18,7 +18,7 @@
     text-decoration: none;
     text-transform: uppercase;
     box-shadow: 0 0 7px black;
-    z-index:99999;
+    z-index:-1;
 }
 
 .fr-arrow {
@@ -56,6 +56,7 @@
     -ms-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
+    z-index:1;
 }
 
 .fr-tooltip.out {
